<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/fondo"
    >



    <LinearLayout
        android:id="@+id/linearLayout_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:background="@color/azul_especial"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <TextView
            android:id="@+id/header_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/home"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:fontFamily="@font/vollkorn"
            android:layout_weight="1"
            android:gravity="start"
            />


        <ImageView
            android:id="@+id/header_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_settings"
            android:contentDescription="@string/icono_de_configuracion"
            android:layout_marginStart="16dp"
            />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout_header">

        <Button
            style="@style/Widget.Material3.Button.ElevatedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_weight="1"
            android:paddingVertical="30dp"
            android:background="@drawable/boton_cuadrado"
            android:text="@string/sector_1_ocupado_70"
            android:textColor="@color/black"
            android:lineSpacingExtra="15dp"
            android:textSize="17sp"
            android:fontFamily="@font/vollkorn"
            />

        <Button
            style="@style/Widget.Material3.Button.ElevatedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_weight="1"
            android:background="@drawable/boton_cuadrado"
            android:paddingVertical="30dp"
            android:textColor="@color/black"
            android:text="@string/sector_2_ocupado_30"
            android:lineSpacingExtra="15dp"
            android:textSize="17sp"
            android:fontFamily="@font/vollkorn"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <TextView
            android:layout_marginHorizontal="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sectores_de_estacionamientos"
            android:textStyle="bold"
            android:textSize="16sp"
            android:fontFamily="@font/vollkorn"
            />

        <Button
            style="@style/Widget.Material3.Button.TonalButton"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="15dp"
            android:text="@string/sector_1"
            android:layout_marginHorizontal="15dp"
            />

        <Button
            style="@style/Widget.Material3.Button.TonalButton"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="15dp"
            android:layout_marginHorizontal="15dp"
            android:text="@string/sector_2"
            />
        <Button
            style="@style/Widget.Material3.Button.TonalButton"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="15dp"
            android:layout_marginHorizontal="15dp"
            android:text="@string/sector_3"
            />
        <Button
            style="@style/Widget.Material3.Button.TonalButton"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="15dp"
            android:layout_marginHorizontal="15dp"
            android:text="@string/sector_4"
            />
        <Button
            style="@style/Widget.Material3.Button.TonalButton"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="15dp"
            android:layout_marginHorizontal="15dp"
            android:text="@string/sector_5"
            />


    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>